[package]
name = "zxtouch"
version = "0.0.5"
edition = "2021"
authors = ["lake"]
description = "zxtouch ios 按键自动化脚本(连点器)"
repository = "https://github.com/dounine/zxtouch"
license = "MIT"

# 忽略文件夹
exclude = ["deb", "image", "target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.56"
async-trait = "0.1.77"
futures = "0.3.30"
[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }