[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxtouch = { path = "..", features = ["debug-print"] }
tokio = { version = "1.35.1", features = ["full"] }
